# Pocket_Pet.exe

Pocket_Pet/: .gitignore  Cargo.toml  turbo.toml
Pocket_Pet/no/Pocket_Pet-1goye68s9klvx/s-h9b6ka0igm-1nvzzye-8r082zh4thkidrsgv48i7eqcu/: 0q2dgvn6fmzmkqeyul9aqfznw.pre-lto.bc  dkrmkobzjqnkz5pdvjs8nqtkm.pre-lto.bc
Pocket_Pet/no/Pocket_Pet-3t5239l5cbgiz/s-h98xjv4gen-1eiodl7-3mcym3ea47bav4u0yy8kza0wt/: ajb5un7mrggkrkp4t5conbemj.pre-lto.bc  b4fyjxilh9ug0lfhaonzmj0zl.pre-lto.bc
Pocket_Pet/sprites/: PIPI.aseprite  money.aseprite  posts_text.aseprite  screen.aseprite  screen_anims.aseprite  sns_posts.aseprite  speechbubble.aseprite  time.aseprite
Pocket_Pet/src/: button.rs  lib.rs  player.rs  script  social_media.rs  textbox.rs
Pocket_Pet/src/button/: button.rs
